force-app/main/default/objects/Quickbooks_API__mdt/Quickbooks_API__mdt.object-meta.xml
<CustomObject>
    <label>Quickbooks API</label>
    <pluralLabel>Quickbooks API</pluralLabel>
</CustomObject>