force-app/main/default/objects/Quickbooks_API__mdt/fields/Access_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_URL__c</fullName>
    <label>Access Token URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>