force-app/main/default/objects/Quickbooks_API__mdt/fields/Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>Auth_URL__c</fullName>
    <label>Auth URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>