force-app/main/default/objects/Quickbooks_API__mdt/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <label>Consumer Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>