force-app/main/default/objects/Quickbooks_API__mdt/fields/Realm_Id__c.field-meta.xml
<CustomField>
    <fullName>Realm_Id__c</fullName>
    <label>Realm Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>