force-app/main/default/objects/Quickbooks_API__mdt/fields/Save_Logs__c.field-meta.xml
<CustomField>
    <fullName>Save_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Logs</label>
    <type>Checkbox</type>
</CustomField>